fix(devices): Bulk selection, banner button alignment
Fixing this issue
- icons next to the "x devices selected" text

--- a/app/modules/csdm/devicesRedux/_devices.scss
+++ b/app/modules/csdm/devicesRedux/_devices.scss
@@ -410,9 +410,6 @@
         width: 100%;
         height: 2.8125rem;
         color: $white;
-        .text, .spinner {
-          flex-grow: 2;
-        }
         div {
           height: 2rem;
         }
